updated may 2016 content

--- a/content/2016-05.html
+++ b/content/2016-05.html
@@ -3,23 +3,24 @@ start: 2016-05-26 17:45
 edition: 31
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/231264081/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqz2EIOjQhOZ_iaHh5kcrIRI'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Flying up with Python"
+    title: "<a href='https://www.youtube.com/watch?v=UFFDa601QjI'>Flying up with Python</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/dinesh-kumar-9a459570'>Dinesh Kumar</a>"
+    resources:
+      -
+        title: "Github"
+        url: "https://github.com/dineshkumar-cse/Elatecopter"
   -
-    time: "6:45"
-    title: "An introduction to deep learning with TensorFlow"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/manishshivanandhan'>Manish M. Shivanandhan</a>"
-  -
-    time: "7:15"
+    time: "7:00"
     title: "Break"
   -
-    time: "7:30"
-    title: "TBA"
+    time: "7:15"
+    title: "<a href='https://www.youtube.com/watch?v=8kaCNtKn73g'>An introduction to deep learning with TensorFlow</a>"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/manishshivanandhan'>Manish M. Shivanandhan</a>"
   -
-    time: "8:15"
+    time: "8:00"
     title: "Networking & Dinner"
 ---
