--- a/content/2016-04.html
+++ b/content/2016-04.html
@@ -3,7 +3,7 @@ start: 2016-04-28 17:45
 edition: 30
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/230536345/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxqwtln9hhRNwpKlO7AsRDT'>YouTube</a>."
 agenda:
   -
     time: "6:00"
