modified one talk title

--- a/content/2016-06.html
+++ b/content/2016-06.html
@@ -14,7 +14,7 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "Lets start with React"
+    title: "Getting started with React(ES6 way)"
     speaker_profile: "By: Raja Sekar"
   -
     time: "7:30"
