--- a/content/2016-06.html
+++ b/content/2016-06.html
@@ -3,22 +3,22 @@ start: 2016-06-30 17:45
 edition: 32
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/232112252/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqwv1eIrWhkNpBPmcsm5jVEa'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Handling Data and Relational Explosion in Database"
+    title: "<a href='https://www.youtube.com/watch?v=pKGEQOtSxjQ'>Handling Data and Relational Explosion in Database</a>"
     speaker_profile: "By: Ramalingam. S"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "Getting started with React(ES6 way)"
+    title: "<a href='https://www.youtube.com/watch?v=kfFAUNp2DRI'>Getting started with React(ES6 way)</a>"
     speaker_profile: "By: Raja Sekar"
   -
     time: "7:30"
-    title: "Yet another Machine Learning Talk"
+    title: "<a href='https://www.youtube.com/watch?v=afpmqZJLOv4'>Yet another Machine Learning Talk</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/raghavan-a-k-3a102713'>Raghavan A K</a>"
   -
     time: "8:00"
