added resources for a talk

--- a/content/2016-06.html
+++ b/content/2016-06.html
@@ -15,7 +15,14 @@ agenda:
   -
     time: "7:00"
     title: "<a href='https://www.youtube.com/watch?v=kfFAUNp2DRI'>Getting started with React(ES6 way)</a>"
-    speaker_profile: "By: Raja Sekar"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/rajzshkr'>Raja Sekar</a>"
+    resources:
+      -
+        title: "Slides"
+        url: "https://rajzshkr.github.io/presentation/react/#/"
+      -
+        title: "Demo"
+        url: "https://github.com/rajzshkr/react-basics"
   -
     time: "7:30"
     title: "<a href='https://www.youtube.com/watch?v=afpmqZJLOv4'>Yet another Machine Learning Talk</a>"
