fixed spelling error

--- a/content/2016-07.html
+++ b/content/2016-07.html
@@ -10,7 +10,7 @@ agenda:
     title: "Comfox - Building a Smart Mirror, data graph"
   -
     time: "6:30"
-    title: "How SPI servers held the lines against Korkbabali's wrath"
+    title: "How SPI servers held the lines against Kabali's wrath"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b'>Boojapathy Chidhambaram</a>"
   -
     time: "7:30"
