changed talk title

--- a/content/2016-07.html
+++ b/content/2016-07.html
@@ -7,7 +7,8 @@ subnote: "This event will be live streamed on YouTube."
 agenda:
   -
     time: "6:00"
-    title: "Comfox - Building a Smart Mirror, data graph"
+    title: "Comfox - The next gen information radiator"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>, Jagdsh LK Chand, Abhinaya"
   -
     time: "6:30"
     title: "How SPI servers held the lines against Kabali's wrath"
