added youtube link

--- a/content/2016-07.html
+++ b/content/2016-07.html
@@ -3,22 +3,22 @@ start: 2016-07-28 17:45
 edition: 33
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/232818824/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqzKMY8FLB6DKqNKYMCyX0jq'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Comfox - The next gen information radiator"
+    title: "<a href='https://www.youtube.com/watch?v=HhAwfIkT7gI'>Comfox - The next gen information radiator</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>, Jagdsh LK Chand, Abhinaya"
   -
     time: "6:30"
-    title: "How SPI servers held the lines against Kabali's wrath"
+    title: "<a href='https://www.youtube.com/watch?v=MQlD8u6h9hQ'>How SPI servers held the lines against Kabali's wrath</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b'>Boojapathy Chidhambaram</a>"
   -
     time: "7:30"
     title: "Break"
   -
     time: "7:45"
-    title: "Panel Discussion on Tech Radar"
+    title: "<a href='https://www.youtube.com/watch?v=u_OA7tjCFFM'>Panel Discussion on Tech Radar</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>, <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>, <a href='https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b'>Boojapathy Chidhambaram</a>, <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>"
   -
     time: "8:30"
