added twitter handle of speaker

--- a/content/2016-08.html
+++ b/content/2016-08.html
@@ -8,7 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "Rethinking State Management"
-    speaker_profile: "By: Tamizhvendan S"
+    speaker_profile: "By: <a href='https://twitter.com/tamizhvendan'>Tamizhvendan S</a>"
   -
     time: "6:45"
     title: "Scrummers and Sprinters"
