added 3rd talk for aug 2016

--- a/content/2016-08.html
+++ b/content/2016-08.html
@@ -18,8 +18,9 @@ agenda:
     title: "Break"
   -
     time: "7:45"
-    title: "TBA"
+    title: "Semantic Versioning"
+    speaker_profile: "By: Avekash Gupta"
   -
-    time: "8:15"
+    time: "8:30"
     title: "Networking & Dinner"
 ---
