--- a/content/2016-08.html
+++ b/content/2016-08.html
@@ -3,22 +3,22 @@ start: 2016-08-25 17:45
 edition: 34
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/233511088/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqy1BWilj7p7I1b_dze7NJtU'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Rethinking State Management"
+    title: "<a href='https://www.youtube.com/watch?v=__QVhjRSjcM'>Rethinking State Management</a>"
     speaker_profile: "By: <a href='https://twitter.com/tamizhvendan'>Tamizhvendan S</a>"
   -
     time: "6:45"
-    title: "Scrummers and Sprinters"
+    title: "<a href='https://www.youtube.com/watch?v=f7lMB3TzLr4'>Scrummers and Sprinters</a>"
     speaker_profile: "By: Ravichandran JV"
   -
     time: "7:30"
     title: "Break"
   -
     time: "7:45"
-    title: "Semantic Versioning"
+    title: "<a href='https://www.youtube.com/watch?v=uDTHYbtOC-k'>Semantic Versioning</a>"
     speaker_profile: "By: Avekash Gupta"
   -
     time: "8:30"
