--- a/content/2016-09.html
+++ b/content/2016-09.html
@@ -3,22 +3,22 @@ start: 2016-09-29 17:45
 edition: 35
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/234139075/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqz3Xb7XM7wWjpAx9LiwcdLh'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Semantic Versioning"
+    title: "<a href='https://www.youtube.com/watch?v=uDTHYbtOC-k'>Semantic Versioning</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/avekashgupta'>Avekash Gupta</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "IoT Developer vs Software Developer"
+    title: "<a href='https://www.youtube.com/watch?v=eVWFf-YTktU'>IoT Developer vs Software Developer</a>"
     speaker_profile: "By: <a href='https://www.linkedin.com/in/amalraju'>Amal Raj</a>"
   -
     time: "7:45"
-    title: "H2O - Smart Water Dispenser"
+    title: "<a href='https://www.youtube.com/watch?v=kxJE2K1CeUo'>H2Oh - Smart Water Dispenser</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/kanadenipun'>Nipun Kanade</a>"
   -
     time: "8:15"
