moved video link as a separate attribute

--- a/content/2015-09.html
+++ b/content/2015-09.html
@@ -7,7 +7,8 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=6vJyp0MeVXA'>Stayzilla : moving from a monolithic stack towards a microservice based architecture</a>"
+    title: "Stayzilla : moving from a monolithic stack towards a microservice based architecture"
+    video_link: "https://www.youtube.com/watch?v=6vJyp0MeVXA"
     speaker_profile: "By: <a href='https://www.linkedin.com/in/arvsr1988'>Arvind Sridharan</a>"
 
   -
@@ -15,11 +16,13 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=FXQBS6rH32s'>So you think you know Java</a>"
+    title: "So you think you know Java"
+    video_link: "https://www.youtube.com/watch?v=FXQBS6rH32s"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
   -
     time: "7:30"
-    title: "<a href='https://www.youtube.com/watch?v=c-1miN1WZgo'>React Apps with a Brain</a>"
+    title: "React Apps with a Brain"
+    video_link: "https://www.youtube.com/watch?v=c-1miN1WZgo"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/gauravagarwalr'>Gaurav Agarwal</a>"
   -
     time: "8:15"
