--- a/content/2015-11.html
+++ b/content/2015-11.html
@@ -7,17 +7,20 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=CjX7jHCKDfY'>How to start hacking electronics</a>"
+    title: "How to start hacking electronics"
+    video_link: "https://www.youtube.com/watch?v=CjX7jHCKDfY"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/deepans'>Deepan Subramani</a>"
   -
     time: "6:45"
-    title: "<a href='https://www.youtube.com/watch?v=sXEa8F8fKC4'>Let's <span style='text-decoration: line-through;'>talk</span> fly drones..</a>"
+    title: "Let's <span style='text-decoration: line-through;'>talk</span> fly drones.."
+    video_link: "https://www.youtube.com/watch?v=sXEa8F8fKC4"
     speaker_profile: "By: Srini Vas"
   -
     time: "7:30"
     title: "Break"
   -
     time: "7:45"
-    title: "<a href='https://www.youtube.com/watch?v=YD-kDwEm9Tc'>IoTT - Keep an eye on TT table from your desk</a>"
+    title: "IoTT - Keep an eye on TT table from your desk"
+    video_link: "https://www.youtube.com/watch?v=YD-kDwEm9Tc"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
 ---
