--- a/content/2015-12.html
+++ b/content/2015-12.html
@@ -7,7 +7,8 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=SNAe4zcmWho'>The Tweeting Tree</a>"
+    title: "The Tweeting Tree"
+    video_link: "https://www.youtube.com/watch?v=SNAe4zcmWho"
     speaker_profile: "By: Nipun Kanade"
     resources:
       -
@@ -15,7 +16,8 @@ agenda:
         url: "http://slides.com/kanadenipun/iotree"
   -
     time: "6:45"
-    title: "<a href='https://www.youtube.com/watch?v=YD-kDwEm9Tc'>IoTT - Keep an eye on TT table from your desk</a>"
+    title: "IoTT - Keep an eye on TT table from your desk"
+    video_link: "https://www.youtube.com/watch?v=YD-kDwEm9Tc"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
     resources:
       -
@@ -32,6 +34,7 @@ agenda:
     title: "Break"
   -         
     time: "7:30"
-    title: "<a href='https://www.youtube.com/watch?v=34DI8xvSp2Y'>Kulir 100 Degree : Automating water heater</a>"
+    title: "Kulir 100 Degree : Automating water heater"
+    video_link: "https://www.youtube.com/watch?v=34DI8xvSp2Y"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/krishnaswamy-subramanian-20359118'>Krishnaswamy Subramanian</a>"
 ---
