--- a/content/2016-03.html
+++ b/content/2016-03.html
@@ -7,11 +7,13 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=NNpqCFdy3iw'>Real Time Streaming with Kafka and Samza</a>"
+    title: "Real Time Streaming with Kafka and Samza"
+    video_link: "https://www.youtube.com/watch?v=NNpqCFdy3iw"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/ganeshpraburavi'>Ganesh Prabu Ravi</a>"
   -
     time: "6:30"
-    title: "<a href='https://www.youtube.com/watch?v=EFgr5R7bfGg'>Serverless Architecture</a>"
+    title: "Serverless Architecture"
+    video_link: "https://www.youtube.com/watch?v=EFgr5R7bfGg"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>"
     image: "selvakn.jpeg"
   -
@@ -19,7 +21,8 @@ agenda:
     title: "Break"
   -
     time: "7:30"
-    title: "<a href='https://www.youtube.com/watch?v=jfWCyI-b17U'>Pattern Matching and Recursion in Elixir</a>"
+    title: "Pattern Matching and Recursion in Elixir"
+    video_link: "https://www.youtube.com/watch?v=jfWCyI-b17U"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/dinesh-balasubramaniam-9663a298'>Dinesh Balasubramaniam</a>, <a href='https://in.linkedin.com/in/arunvelsriram'>Arunvel Sriram</a>"
   -
     time: "8:15"
