--- a/content/2016-05.html
+++ b/content/2016-05.html
@@ -7,7 +7,8 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=UFFDa601QjI'>Flying up with Python</a>"
+    title: "Flying up with Python"
+    video_link: "https://www.youtube.com/watch?v=UFFDa601QjI"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/dinesh-kumar-9a459570'>Dinesh Kumar</a>"
     resources:
       -
@@ -18,7 +19,8 @@ agenda:
     title: "Break"
   -
     time: "7:15"
-    title: "<a href='https://www.youtube.com/watch?v=8kaCNtKn73g'>An introduction to deep learning with TensorFlow</a>"
+    title: "An introduction to deep learning with TensorFlow"
+    video_link: "https://www.youtube.com/watch?v=8kaCNtKn73g"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/manishshivanandhan'>Manish M. Shivanandhan</a>"
   -
     time: "8:00"
