--- a/content/2016-06.html
+++ b/content/2016-06.html
@@ -7,14 +7,16 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=pKGEQOtSxjQ'>Handling Data and Relational Explosion in Database</a>"
+    title: "Handling Data and Relational Explosion in Database"
+    video_link: "https://www.youtube.com/watch?v=pKGEQOtSxjQ"
     speaker_profile: "By: Ramalingam. S"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=kfFAUNp2DRI'>Getting started with React(ES6 way)</a>"
+    title: "Getting started with React(ES6 way)"
+    video_link: "https://www.youtube.com/watch?v=kfFAUNp2DRI"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/rajzshkr'>Raja Sekar</a>"
     resources:
       -
@@ -25,7 +27,8 @@ agenda:
         url: "https://github.com/rajzshkr/react-basics"
   -
     time: "7:30"
-    title: "<a href='https://www.youtube.com/watch?v=afpmqZJLOv4'>Yet another Machine Learning Talk</a>"
+    title: "Yet another Machine Learning Talk"
+    video_link: "https://www.youtube.com/watch?v=afpmqZJLOv4"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/raghavan-a-k-3a102713'>Raghavan A K</a>"
   -
     time: "8:00"
