--- a/content/2016-07.html
+++ b/content/2016-07.html
@@ -7,18 +7,21 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=HhAwfIkT7gI'>Comfox - The next gen information radiator</a>"
+    title: "Comfox - The next gen information radiator"
+    video_link: "https://www.youtube.com/watch?v=HhAwfIkT7gI"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>, Jagdsh LK Chand, Abhinaya"
   -
     time: "6:30"
-    title: "<a href='https://www.youtube.com/watch?v=MQlD8u6h9hQ'>How SPI servers held the lines against Kabali's wrath</a>"
+    title: "How SPI servers held the lines against Kabali's wrath"
+    video_link: "https://www.youtube.com/watch?v=MQlD8u6h9hQ"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b'>Boojapathy Chidhambaram</a>"
   -
     time: "7:30"
     title: "Break"
   -
     time: "7:45"
-    title: "<a href='https://www.youtube.com/watch?v=u_OA7tjCFFM'>Panel Discussion on Tech Radar</a>"
+    title: "Panel Discussion on Tech Radar"
+    video_link: "https://www.youtube.com/watch?v=u_OA7tjCFFM"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>, <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>, <a href='https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b'>Boojapathy Chidhambaram</a>, <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>"
   -
     time: "8:30"
