--- a/content/2016-08.html
+++ b/content/2016-08.html
@@ -7,11 +7,13 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=__QVhjRSjcM'>Rethinking State Management</a>"
+    title: "Rethinking State Management"
+    video_link: "https://www.youtube.com/watch?v=__QVhjRSjcM"
     speaker_profile: "By: <a href='https://twitter.com/tamizhvendan'>Tamizhvendan S</a>"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=f7lMB3TzLr4'>Scrummers and Sprinters</a>"
+    title: "Scrummers and Sprinters"
+    video_link: "https://www.youtube.com/watch?v=f7lMB3TzLr4"
     speaker_profile: "By: Ravichandran JV"
   -
     time: "8:15"
