--- a/content/2016-09.html
+++ b/content/2016-09.html
@@ -7,18 +7,21 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=uDTHYbtOC-k'>Semantic Versioning</a>"
+    title: "Semantic Versioning"
+    video_link: "https://www.youtube.com/watch?v=uDTHYbtOC-k"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/avekashgupta'>Avekash Gupta</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=eVWFf-YTktU'>IoT Developer vs Software Developer</a>"
+    title: "IoT Developer vs Software Developer"
+    video_link: "https://www.youtube.com/watch?v=eVWFf-YTktU"
     speaker_profile: "By: <a href='https://www.linkedin.com/in/amalraju'>Amal Raj</a>"
   -
     time: "7:45"
-    title: "<a href='https://www.youtube.com/watch?v=kxJE2K1CeUo'>H2Oh - Smart Water Dispenser</a>"
+    title: "H2Oh - Smart Water Dispenser"
+    video_link: "https://www.youtube.com/watch?v=kxJE2K1CeUo"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/kanadenipun'>Nipun Kanade</a>"
   -
     time: "8:15"
