--- a/content/example.html
+++ b/content/example.html
@@ -14,6 +14,7 @@ agenda:
   -
     time: "<time as a plain string, e.g. 5:30>"
     title: "<title>"
+    video_link: "link to the recorded/live video"
     subtitle: "<short description for the talk, shown below the title>"
     speaker: "<speaker name>"
     profile: "<link/url when clicking on the speaker name, e.g. twitter, facebook, website, etc>"
