--- a/content/2015-06.html
+++ b/content/2015-06.html
@@ -7,7 +7,8 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=btDh8ctdfSs'>Scalable RDBMS via CDI and MyBatis</a>"
+    title: "Scalable RDBMS via CDI and MyBatis"
+    video_link: "https://www.youtube.com/watch?v=btDh8ctdfSs"
     speaker: "Giridhar Kannan"
     profile: https://github.com/giridharkannan
   -
@@ -15,12 +16,14 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=9dGLWKBaagI'>Effective use of JDBI</a>"
+    title: "Effective use of JDBI"
+    video_link: "https://www.youtube.com/watch?v=9dGLWKBaagI"
     speaker: "Manikandan Kumar"
     profile: https://www.linkedin.com/in/kmanikandan26
   -
     time: "7:30"
-    title: "<a href='https://www.youtube.com/watch?v=cM9Nvk32kq0'>iDepth: Life of a query in Postgres</a>"
+    title: "iDepth: Life of a query in Postgres"
+    video_link: "https://www.youtube.com/watch?v=cM9Nvk32kq0"
     speaker: Varadharajan Mukundan
     profile: https://www.linkedin.com/pub/varadharajan-mukundan/17/b54/621
   -
