--- a/content/2015-10.html
+++ b/content/2015-10.html
@@ -7,18 +7,21 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=7gogs96PA_k'>Building a global open Internet of Things data network</a>"
+    title: "Building a global open Internet of Things data network"
+    video_link: "https://www.youtube.com/watch?v=7gogs96PA_k"
     speaker_profile: "By: <a href='https://nl.linkedin.com/in/wienke'>Wienke Giezeman</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=gZxkx85vt18'>Common blindspots on the Journey to Production beyond Continuous Delivery</a>"
+    title: "Common blindspots on the Journey to Production beyond Continuous Delivery"
+    video_link: "https://www.youtube.com/watch?v=gZxkx85vt18"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
   -
     time: "7:45"
-    title: "<a href='https://www.youtube.com/watch?v=5UHGpIIXM_U'>Building low latency application</a>"
+    title: "Building low latency application"
+    video_link: "https://www.youtube.com/watch?v=5UHGpIIXM_U"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
   -
     time: "8:15"
