--- a/content/2016-01.html
+++ b/content/2016-01.html
@@ -7,14 +7,16 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=aPPaQF1aVw4'>Introduction to Elixir</a>"
+    title: "Introduction to Elixir"
+    video_link: "https://www.youtube.com/watch?v=aPPaQF1aVw4"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=RIKI4BQ3rQ4'>Introduction to Haskell & it's roadblocks in learning</a>"
+    title: "Introduction to Haskell & it's roadblocks in learning"
+    video_link: "https://www.youtube.com/watch?v=RIKI4BQ3rQ4"
     speaker_profile: "By: Sreenidhi Nair"
   -
     time: "8:15"
