--- a/content/2016-02.html
+++ b/content/2016-02.html
@@ -7,14 +7,16 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=c1U5WniCEuA'>Building Pied Piper, for real</a>"
+    title: "Building Pied Piper, for real"
+    video_link: "https://www.youtube.com/watch?v=c1U5WniCEuA"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/swaathi-kakarla-65b304a3'>Swaathi Kakarla</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "<a href='https://www.youtube.com/watch?v=x6xisPV0OOY'>Let us not REST</a>"
+    title: "Let us not REST"
+    video_link: "https://www.youtube.com/watch?v=x6xisPV0OOY"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
   -
     time: "8:00"
