--- a/content/2016-04.html
+++ b/content/2016-04.html
@@ -7,18 +7,21 @@ subnote: "This event will be live streamed on <a href='https://www.youtube.com/p
 agenda:
   -
     time: "6:00"
-    title: "<a href='https://www.youtube.com/watch?v=qeBV9JRoTOA'>Running Infrastructure on Spot instances in AWS</a>"
+    title: "Running Infrastructure on Spot instances in AWS"
+    video_link: "https://www.youtube.com/watch?v=qeBV9JRoTOA"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/ashwanthkumar'>Ashwanth Kumar</a>"
   -
     time: "6:45"
-    title: "<a href='https://www.youtube.com/watch?v=uiv3WAr-QQE'>Express automation test using Espresso</a>"
+    title: "Express automation test using Espresso"
+    video_link: "https://www.youtube.com/watch?v=uiv3WAr-QQE"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/arvind-srinivasan-bb32812b'>Arvind Srinivasan</a>"
   -
     time: "7:15"
     title: "Break"
   -
     time: "7:30"
-    title: "<a href='https://www.youtube.com/watch?v=ZPEXttfVulM'>Making your life easier with just types and functions</a>"
+    title: "Making your life easier with just types and functions"
+    video_link: "https://www.youtube.com/watch?v=ZPEXttfVulM"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/chandan-singh-609ab1b7'>Chandan Singh</a>"
   -
     time: "8:15"
